# neon_samurai

./: .clang-format  .editorconfig  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  all_source_code.txt  bloom.yaml  build.sh  cross-file.txt  flake.nix  index.md  meson.build  meson_options.txt  project.code-workspace
cmake/platform/linux/: CMakeLists.txt  toolchain.cmake
cmake/platform/midifighter/: CMakeLists.txt  toolchain.cmake
meson/platform/linux/: meson.build
meson/platform/midifighter/: meson.build
src/: Config.h.in  Makefile  Version.h.in  all_code.txt  main.c  main_old.c  meson.build
src/.bloom/: settings.json
src/Comms/: CBOR.c  CBOR.h  CommDefines.h  Comms.c  Comms.h  CommsTypes.h  MessageDataDefines.h  ModuleIDs.h  Network.c  Network.h
src/Comms/Modules/: ModuleIDs.h  NetworkMessages.h
src/Display/: Colour.c  Colour.h  Display.c  Display.h  EncoderDisplay.c  EncoderDisplay.h  Gamma.h  RGB.h  fast_hsv2rgb.h  fast_hsv2rgb_8bit.c  meson.build
src/Input/: Encoder.c  Encoder.h  Input.c  Input.h  SideSwitch.c  SideSwitch.h
src/LUFA/: LUFAConfig.h  License.txt  Version.h  meson.build
src/LUFA/Common/: ArchitectureSpecific.h  Architectures.h  Attributes.h  BoardTypes.h  Common.h  CompilerSpecific.h  Endianness.h
src/LUFA/Platform/: Platform.h
src/MIDI/: MIDI.c  MIDI.h  MIDICommandDefineList.h  MIDICommandDefines.h  MIDIMuffinCommands.h
src/Peripheral/: DMA.c  DMA.h  GPIO.c  GPIO.h  Peripheral.c  Peripheral.h  Timer.c  Timer.h  USART.c  USART.h
src/System/: CPU.h  Data.c  Data.h  HardwareDefines.h  HardwareDescription.h  Interrupt.h  PinMap.h  Settings.h  SoftTimer.c  SoftTimer.h  System.c  System.h  SystemClock.h  Types.h  meson.build
src/USB/: Descriptors.c  Descriptors.h  Descriptors_Old.h  USB.c  USB.h  VirtualSerial.c  VirtualSerial.h
src/Utility/: Config.h.in  DataTypes.h  Types.h  Utility.h  Utils.h  Version.h.in  meson.build
src/_archive/: main_old.c
src/_archive/Comms/: Comms.c  Network.c
src/_archive/Display/: Colour.c  Display.c  EncoderDisplay.c  fast_hsv2rgb_8bit.c
src/_archive/Input/: Encoder.c  Input.c
src/_archive/MIDI/: MIDI.c
src/_archive/System/: Data.c  SoftTimer.c  System.c
src/_archive/USB/: Descriptors.c  USB.c  VirtualSerial.c
src/_archive/Utility/: Version.h.in
src/animation/: animation.c
src/application/io/: encoder.c
src/application/usb/: usb.c
src/board/: board.c
src/board/djtt/: midifighter.c
src/common/: CMakeLists.txt  README
src/common/console/: console.c
src/common/event/: event.c  io.c  sys.c
src/common/input/: encoder.c  quadrature.c  switch.c
src/common/lfo/: lfo.c
src/common/midi/: midi.c
src/common/sys/: time.c
src/common/virtmap/: virtmap.c
src/config/: config.c
src/console/: console.c
src/core/: config_data.c  core_encoder.c  core_event.c  core_opmode.c  core_switch.c  display.c  hw_encoder.c  hw_led.c  hw_switch.c  input_manager.c  main.c  midi_lufa.c  sysex.c  systime.c  usb_lufa.c
src/display/: display.c
src/drivers/: encoder.c  gpio_switch.c  hw_encoder.c  quad_encoder.c  shiftregister.c  sreg.c  switch.c
src/encoder/: encoder.c  encoder_quadrature.c  encoder_virtual.c  hardware.c  quadrature.c
src/event/: event.c  event_core.c  event_io.c  io.c  sys.c
src/hal/: README  adc.c  boot.c  dma.c  gpio.c  init.c  signature.c  sys.c  timer.c  usart.c
src/include/Comms/: CBOR.h  Comms.h  CommsTypes.h
src/include/Display/: Colour.h  Display.h  fast_hsv2rgb.h
src/include/Peripheral/: DMA.h  GPIO.h  Timer.h  USART.h
src/include/USB/: Descriptors.h  USB.h
src/include/Utility/: Utility.h
src/include/board/: board.h
src/include/console/: console.h
src/include/core/: core_encoder.h  core_error.h  core_event.h  core_opmode.h  core_rgb.h  core_switch.h  core_types.h  core_utility.h  midifighter.h  rgb.h  sysex.h  virtmap.h
src/include/devices/: djtt_midifighter.h
src/include/display/: display.h  rgb.h
src/include/drivers/: encoder.h  gpio_switch.h  hw_encoder.h  quad_encoder.h  sreg.h  switch.h
src/include/encoder/: encoder_quadrature.h  encoder_virtual.h
src/include/event/: animation.h  event.h  events_core.h  events_io.h  events_midi.h  general.h  io.h  midi.h  sys.h
src/include/hal/: adc.h  dma.h  gpio.h  signature.h  sys.h  timer.h  usart.h
src/include/input/: encoder.h  input.h  quadrature.h  switch.h
src/include/io/: encoder.h  io.h  io_device.h  io_device_types.h  quadrature.h  switch.h
src/include/led/: animation.h  color.h  hsv2rgb.h  led.h  rgb.h
src/include/lfo/: lfo.h
src/include/menu/: menu.h
src/include/midi/: midi.h  midi_cc.h  midi_sysex_nrt.h  midi_sysex_rt.h  midi_types.h  sysex.h
src/include/midifighter/: midifighter.h
src/include/protocol/: protocol.h
src/include/sys/: config.h  print.h  time.h  types.h  version.h
src/include/system/: CPU.h  Interrupt.h  SoftTimer.h  System.h  config.h  err.h  error.h  event.h  hardware.h  opmode.h  os.h  print.h  rng.h  sys.h  system.h  time.h  types.h  utility.h
src/include/usb/: usb.h  usb_lufa.h
src/include/virtmap/: types.h  virtmanager.h  virtmap.h  virtmap_types.h
src/input/: Input.c  SideSwitch.c  encoder.c  input.c  quadrature.c  switch.c
src/io/: hw_switch.c  input_manager.c  io.c  io_device.c  switch.c
src/io/encoder/: encoder_quadrature.c
src/io/switch/: switch.c
src/led/: color.c  hsv2rgb.c  hw_led.c  led.c
src/lfo/: lfo.c
src/menu/: menu.c
src/midi/: midi.c  midi_lufa.c  sysex.c
src/midi/backend/: midi_lufa.c  midi_rt.c
src/midifighter/: display.c  hw_encoder.c  hw_led.c  input_manager.c  main.c  menu.c  meson.build  systime.c
src/platform/: README
src/platform/linux/: main.c  meson.build
src/platform/midifighter/: config_data.c  display.c  hw_encoder.c  hw_led.c  hw_switch.c  input_manager.c  main.c  menu.c  meson.build  (+4 more)
src/sys/: SoftTimer.c  System.c  os.c  system.c  time.c
src/system/: CPU.h  Data.c  Data.h  Interrupt.h  SoftTimer.c  SoftTimer.h  System.c  event.c  os.c  rng.c  sys.c  system.c  systime.c
src/usb/: usb_lufa.c
src/virtmap/: virtmanager.c  virtmap.c
(+281 files in other folders)
